--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,14 @@ cmake_minimum_required(VERSION 3.16)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++20")
 project(ray_tracing)
 
-set(HEADERS vec3.h)
-set(SOURCES main.cpp)
+set(HEADERS 
+    vec3.h 
+    color.h
+)
+set(SOURCES 
+    main.cpp
+    vec3.cpp
+    color.cpp
+)
 
 add_executable(ray_tracing ${SOURCES})
