--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,9 +3,10 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++20")
 project(ray_tracing)
 
 set(HEADERS 
-    vec3.h 
     color.h
     ray.h
+    vec3.h 
+    rtweekend.h
     hittable.h
     hittable_list.h
     sphere.h
