Refactor directory structure and improve CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,32 @@
-cmake_minimum_required(VERSION 4.0)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++23")
-project(ray_tracing)
+cmake_minimum_required(VERSION 3.20)
+project(ray_tracing VERSION 1.0 LANGUAGES CXX)
 
-set(HEADERS 
-    include/color.h
-    include/ray.h
-    include/vec3.h 
-    include/rtweekend.h
-    include/hittable.h
-    include/hittable_list.h
-    include/sphere.h
-    include/interval.h
-    include/camera.h
+# Build configuration
+set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+add_compile_options(-Wall -Wextra -Wpedantic -g)
+
+file(GLOB_RECURSE RAY_TRACING_SOURCES
+    "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
 )
-set(SOURCES 
-    src/main.cpp
+file(GLOB_RECURSE RAY_TRACING_HEADERS
+    "${CMAKE_CURRENT_SOURCE_DIR}/include/ray_tracing/*.h"
 )
 
-add_executable(ray_tracing ${SOURCES})
+# Create executable
+add_executable(ray_tracing ${RAY_TRACING_SOURCES} ${RAY_TRACING_HEADERS})
+
+target_include_directories(ray_tracing PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+)
+
+# Installation
+set_target_properties(ray_tracing PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
+)
+
+include(GNUInstallDirs)
+install(TARGETS ray_tracing
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+)
